--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.css"></head>
+<link rel="stylesheet" href="styles.bc822057ef8c2357be50.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="scripts.js" defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.049f620af8c864cf4d88.js" nomodule defer></script><script src="polyfills-es2015.f2c5ab749249a66bdf26.js" type="module"></script><script src="scripts.a55bb64091fab5cb8c29.js" defer></script><script src="main-es2015.2dc0b18f9354ac4351b2.js" type="module"></script><script src="main-es5.2dc0b18f9354ac4351b2.js" nomodule defer></script></body>
 </html>
